# nativeCrashCatch

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
nativeCrash/: build.gradle
nativeCrash/src/androidTest/java/com/example/nativecrash/: ExampleInstrumentedTest.java
nativeCrash/src/main/: AndroidManifest.xml
nativeCrash/src/main/cpp/: CMakeLists.txt  nativecrash.cpp
nativeCrash/src/main/cpp/breakpad/: CMakeLists.txt
nativeCrash/src/main/java/com/example/nativecrash/: NativeLib.java
